@@ -1,3 +1,9 @@
+2004-09-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* input/regression/accidental-piano.ly (Module): new file.
+
+	* lily/lily-guile.cc (LY_DEFINE): ly_assoc_get: new function.
+
 2004-09-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/slur-scoring.cc (score_extra_encompass): widen X extent of
